objects/Facility_Tranche__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>Agreement__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Facility__r.Agreement__r.Id ,  Facility__r.Agreement__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_End_Date__c</fullName>
        <formula>IF(
	ISPICKVAL(Availability__c,&apos;Day(s)&apos;),Availability_Start_Date__c + Availability_Period__c, IF( ISPICKVAL(Availability__c,&apos;Month(s)&apos;),
	 
DATE(
  YEAR( Availability_Start_Date__c) + FLOOR( ( MONTH ( Availability_Start_Date__c) + Availability_Period__c - 1 ) / 12 ),
  MOD( MONTH ( Availability_Start_Date__c) + Availability_Period__c - 1 + 
    IF( DAY ( Availability_Start_Date__c) &gt; CASE( MOD( MONTH( Availability_Start_Date__c) + Availability_Period__c - 1, 12 ) + 1, 
      2, 28,
      4, 30,
      6, 30,
      9, 30, 
      11, 30,
      31 ), 1, 0 ), 12 ) + 1,
    IF( DAY( Availability_Start_Date__c) &gt; CASE( MOD( MONTH( Availability_Start_Date__c ) + Availability_Period__c - 1, 12 ) + 1,
      2, 28, 
      4, 30, 
      6, 30, 
      9, 30, 
      11, 30, 
      31 ), 
    1, DAY( Availability_Start_Date__c)
  )
)






, DATE(YEAR(Availability_Start_Date__c)+Availability_Period__c, MONTH(Availability_Start_Date__c), DAY(Availability_Start_Date__c))



))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Availability_Period__c</fullName>
        <label>Availability Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability_Start_Date__c</fullName>
        <label>Availability Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalFacilityTrancheId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalFacilityTrancheId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Facility Tranches</relationshipLabel>
        <relationshipName>Facility_Tranches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Financial_Year_End_Date__c</fullName>
        <formula>Facility__r.Agreement__r.Financial_Year_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Portion_Total_Amount__c</fullName>
        <label>Lender Portion Total Amount</label>
        <summarizedField>Tranche_Party__c.Facility_Amount__c</summarizedField>
        <summaryForeignKey>Tranche_Party__c.Facility_Tranche__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Repayment_Profile_Type__c</fullName>
        <label>Repayment Profile Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Repayment_Profile_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Agreement_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure_Period__c</fullName>
        <label>Tenure Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tenure_Period</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrancheLimitBalance__c</fullName>
        <description>RN - CloudSmiths - read only field that calculate the limit minus the sum of the related drawdowns</description>
        <inlineHelpText>The Tranche Limit minus the sum of the related drawdowns</inlineHelpText>
        <label>Tranche Limit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranche_Limit__c</fullName>
        <label>Tranche Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranche_Type__c</fullName>
        <label>Tranche Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facility_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Facility Tranche</label>
    <nameField>
        <label>Facility Tranche Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Tranches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lender_Portion_Amount_Exceed_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Lender_Portion_Total_Amount__c  &gt; Tranche_Limit__c, True, False)</errorConditionFormula>
        <errorMessage>The Lender Portion Amount cannot exceed the Tranche Limit</errorMessage>
    </validationRules>
</CustomObject>